# slack-ai-assistant

./: .gitignore  .golangci.yml  CLAUDE.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/server/: main.go
llamaindex-server/: .gitignore  Dockerfile  QUICKSTART.md  README.md  app.py  build_indexes.py  list_models.py  pyproject.toml  requirements.txt  setup.sh  test_llamaindex.sh  test_server.py  verify_install.py
pkg/agent/: agent.go  workerpool.go  workerpool_test.go
pkg/database/: database.go  database_test.go
pkg/llm/: llm.go  types.go
pkg/mocks/llm/: mock_llm.go
pkg/mocks/slack-bot/: mock_slack_bot.go
pkg/slack-bot/: slack-bot.go
rag-data/metallb/4.20/: MetalLB Q&A.docx
rag-data/sriov/4.16/: sample.md
slack-assistant/: Dockerfile  README.md  go.mod  go.sum
slack-assistant/cmd/server/: main.go
slack-assistant/pkg/agent/: agent.go  agent_test.go  workerpool.go
slack-assistant/pkg/database/: database.go
slack-assistant/pkg/llm/: llamaindex.go  llamaindex_test.go  llm.go
slack-assistant/pkg/mocks/database/: mock_database.go
